fix: fix visible scroll bar on animation

--- a/styles.css
+++ b/styles.css
@@ -315,11 +315,11 @@ button {
 
 @keyframes explode {
   0% {
-    transform: scale(1);
+    transform: scale(0.2);
     opacity: 1;
   }
   100% {
-    transform: scale(1.5);
+    transform: scale(1);
     opacity: 0;
   }
 }
